--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./script/carusel.css">
 </head>
 <body>
+    <div class="wrapper">
     <header class="header container flex">
         <img src="./img/header/logo.png" alt="logo">
         <nav class="header_nav">
@@ -36,10 +37,10 @@
             </ul>
         </nav>
         <div>
-            <button class="buttons">Buy template</button>
+            <button class="button-grey">Buy template</button>
         </div>
-        <div>
-            <button class="buttons button_basket">Cart</button>
+        <div class="button-grey_basket">
+            <button class="button-grey button_basket">Cart</button>
             <img src="./img/header/basket.png" alt="basket" class="header_basket">
             <div class="header_img"></div>
             <div class="header_number">0</div>
@@ -51,25 +52,18 @@
         <p class="v_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
     </section>
     <section class="about">
-           <div class="container flex">
+            <div class="container flex">
             <img class="about_img" src="./img/about/IMAGE.png" alt="pictures">
             <img src="./img/about/fon.png" alt="fon" class="about_fon_top">
             <img src="./img/about/fon.png" alt="fon" class="about_fon_bottom">
-            <div class="carusel">
-                <div class="carusel_items">
+            <div class="about_content">
+                <div class="about_items">
                     <h3 class="v_pre_title">Who are we?</h3>
                     <h2 class="v_title">A bit about us.</h2>
                     <p class="v_text about_v_text">We are an outdoor gear company focused on Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et.</p>
                 </div>
-                <div class="carusel_items">
-                    <h3 class="v_pre_title">Who are we?</h3>
-                    <h2 class="v_title">And this is us.</h2>
-                    <p class="v_text about_v_text">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Eveniet quod dicta nam aperiam veritatis nisi minus nesciunt illo accusantium laudantium dolore, aliquam quo sint similique, nostrum ipsam cumque, blanditiis modi.</p>
-                </div>
-                <div class="carusel_items">
-                    <h3 class="v_pre_title">Who are we?</h3>
-                    <h2 class="v_title">And this is us, of course.</h2>
-                    <p class="v_text about_v_text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis esse fuga laboriosam maiores iusto commodi voluptates ipsa consequuntur, atque amet.</p>
+                <div class="about_button">
+                    <button class="buttons">Read more</button>
                 </div>
             </div>
         </div>
@@ -117,6 +111,179 @@
         <img src="./img/setting/fon_top.png" alt="fon" class="setting_fon_top">
         <img src="./img/setting/fon_bottom.png" alt="fon" class="setting_fon_bottom">
     </section>
+    <section class="categories container">
+        <div class="categories_content">
+            <h3 class="v_pre_title">Meet the family</h3>
+            <h2 class="v_title">What we have in store for you.</h2>
+            <p class="v_text categories_v_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+        </div>
+        <div class="grid_categories">
+            <ul class="categories_list">
+                <li class="categories_items">
+                    <img src="./img/categories/1.png" alt="pictures" class="categories_img">
+                    <div class="categories_img_top">
+                        <h3 class="categories_title">Accessories</h3>
+                        <p class="categories_text">Accessories you didn't know you needed.</p>
+                        <button class="buttons">View Accessories</button>
+                    </div>
+                </li>
+                <li class="categories_items">
+                    <img src="./img/categories/2.png" alt="pictures" class="categories_img">
+                    <div class="categories_img_top">
+                        <h3 class="categories_title">Apparel</h3>
+                        <p class="categories_text">Check out our line of non-hiking clothes.</p>
+                        <button class="buttons">View Apparel</button>
+                    </div>
+                </li>
+                <li class="categories_items">
+                    <img src="./img/categories/3.png" alt="pictures" class="categories_img">
+                    <div class="categories_img_top">
+                        <h3 class="categories_title">Climbing Gear</h3>
+                        <p class="categories_text">Climbing gear for every occasion.</p>
+                        <button class="buttons">View Climbing Gear</button>
+                    </div>
+                </li>
+                <li class="categories_items">
+                    <img src="./img/categories/4.png" alt="pictures" class="categories_img">
+                    <div class="categories_img_top">
+                        <h3 class="categories_title">Headwear</h3>
+                        <p class="categories_text">Our beanies are so comfy you won't believe it.</p>
+                        <button class="buttons">View Headwear</button>
+                    </div>
+                </li>
+                <li class="categories_items">
+                    <img src="./img/categories/5.png" alt="pictures" class="categories_img">
+                    <div class="categories_img_top">
+                        <h3 class="categories_title">Hiking Gear</h3>
+                        <p class="categories_text">Desert or mountain? Doesn't matter.</p>
+                        <button class="buttons">View Hiking Gear</button>
+                    </div>
+                </li>
+                <li class="categories_items">
+                    <img src="./img/categories/6.png" alt="pictures" class="categories_img">
+                    <div class="categories_img_top">
+                        <h3 class="categories_title">Jackets</h3>
+                        <p class="categories_text">Our jackets are perfect for every season.</p>
+                        <button class="buttons">View Jackets</button>
+                    </div>
+                </li>
+            </ul>
+        </div>
+        <div>
+            <button class="buttons">Show all categories</button>
+        </div>
+    </section>
+    <section class="products">
+        <div class="products_top">
+            <img src="./img/products/fon_top.png" alt="fon">
+            <div class="products_top_content ">
+                <ul class="products_list  flex">
+                    <li class="flex">
+                        <img class="products_icon" src="./img/products/1.png" alt="basket">
+                        <p class="products_text products_icon">First Aid Kit  </p>
+                        <p class="products_text">Banger Bottle</p>
+                    </li>
+                    <li class="flex">
+                        <img class="products_icon"  src="./img/products/2.png" alt="foto">
+                        <p class="products_text">Brian Schultz</p>
+                    </li>
+                    <li class="flex">
+                        <img class="products_icon" src="./img/products/3.png" alt="foto">
+                        <p class="products_text">Leah Stoff</p>
+                    </li>
+                    <li class="flex">
+                        <img class="products_icon" src="./img/products/4.png" alt="foto">
+                        <p class="products_text">Catalina, California</p>
+                    </li>
+                </ul>
+             
+
+            </div>
+        </div>
+        <div class="products_bottom">
+            <div class="products_content container">
+                <h3 class=" products_pre_title">Shop</h3>
+                <h2 class="v_title products_title">Check out our products.</h2>
+                <p class="v_text products_v_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+                <div class="products_buttons">
+                    <button class="products_button">Visit shop</button>
+                </div>
+            </div>
+            <div class="products_bottom_fon">
+                <img src="./img/products/fon_bottom.png" alt="fon grid">
+            </div>
+        </div>
+    </section>
+    <section class="subscribe about">
+        <div class="container flex">
+        <img class="about_img" src="./img/subscribe/1.png" alt="pictures">
+        <img src="./img/about/fon.png" alt="fon" class="about_fon_top">
+        <img src="./img/about/fon.png" alt="fon" class="about_fon_bottom">
+        <div class="about_content">
+            <div class="about_items">
+                <h3 class="v_pre_title">Some light reading</h3>
+                <h2 class="v_title subscribe_title">Subscribe to our magazine today.</h2>
+                <p class="v_text about_v_text">We are an outdoor gear company focused on Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nullam scelerisque aliquam odio et faucibus. Nulla rhoncus feugiat eros quis consectetur. Morbi neque ex, condimentum dapibus congue et.</p>
+            </div>
+            <div class="about_button">
+                <button class="buttons">Read more</button>
+            </div>
+        </div>
+    </div>
+    </section>
+    <footer class="footer">
+        <div class="container">
+            <div class="footer_logo">
+                 <img  src="./img/footer/logo.png" alt="logo">
+            </div>
+            <div class="footer_content flex">
+                <div class="footer_content_left flex">
+                   <div class="footer_list">
+                        <h3 class="footer_list_title">Pages</h3>
+                        <h3 class="footer_list_paragraph">Home</h3>
+                        <h3 class="footer_list_paragraph">Shop</h3>
+                        <h3 class="footer_list_paragraph">Categories</h3>
+                        <h3 class="footer_list_paragraph">Buyer's guides</h3>
+                        <h3 class="footer_list_paragraph">404</h3>
+                        <h3 class="footer_list_paragraph">Password</h3>
+                   </div>
+                   <div class="footer_list">
+                        <h3 class="footer_list_title">Gear categories</h3>
+                        <h3 class="footer_list_paragraph">Hiking Gear</h3>
+                        <h3 class="footer_list_paragraph">Climbing Gear</h3>
+                        <h3 class="footer_list_paragraph">Jackets</h3>
+                        <h3 class="footer_list_paragraph">Accessories</h3>
+                        <h3 class="footer_list_paragraph">Apparel</h3>
+                        <h3 class="footer_list_paragraph">Headwear</h3>
+                   </div>
+                   <div class="footer_list">
+                        <h3 class="footer_list_title">Company</h3>
+                        <h3 class="footer_list_paragraph">About us</h3>
+                        <h3 class="footer_list_paragraph">Our team</h3>
+                        <h3 class="footer_list_paragraph">Contact</h3>
+                        <h3 class="footer_list_paragraph">Terms & Conditions</h3>
+                        <h3 class="footer_list_paragraph">Style guide</h3>
+                        <h3 class="footer_list_paragraph">Licenses</h3>
+                   </div>
+                </div>
+                <div class="footer_content_right">
+                    <div class="footer_contecst">
+                        <h3 class="footer_list_title">Newsletter</h3>
+                        <p class="footer_list_text">Subscribe to our (infrequent) newsletter where we share news about upcoming listings and projects.</p>
+                    </div>
+                    <div class="footer_right_form">
+                        <label class="footer_label">
+                            <input class="footer_input" type="email" placeholder="E-mail">
+                        </label>
+                        <div class="footer_button">
+                            <button class="button-grey">Submit</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js" integrity="sha512-p55Bpm5gf7tvTsmkwyszUe4oVMwxJMoff7Jq3J/oHaBk+tNQvDKNz9/gLxn9vyCjgd6SAoqLnL13fnuZzCYAUA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="./script/bxslider.js"></script>
