--- a/index.html
+++ b/index.html
@@ -196,8 +196,6 @@
                         <p class="products_text">Catalina, California</p>
                     </li>
                 </ul>
-             
-
             </div>
         </div>
         <div class="products_bottom">
@@ -211,6 +209,42 @@
             </div>
             <div class="products_bottom_fon">
                 <img src="./img/products/fon_bottom.png" alt="fon grid">
+            </div>
+        </div>
+    </section>
+    <section class="navigating container">
+        <div class="navigating_content">
+            <h3 class="v_pre_title navigating_pre_title">Buyer's guides</h3>
+            <h2 class="v_title">Navigating our offering.</h2>
+            <p class="v_text navigating_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
+        </div>
+        <div class="carusel">
+            <div class="carusel_items ">
+                <img src="./img/navigating/p_1.png" alt="foto" class="navigating_foto">
+                <p class="v_text nav_v_text">3 climbing accessories for the climber that has everything</p>
+                <div class="navigating_persons flex">
+                    <img src="./img/navigating/n_1.png" alt="foto" class="persons_foto">
+                    <div class="persons">
+                        <p class="persons_name">Alex Jenna</p>
+                        <p class="persons_position">QA</p>
+                    </div>
+                    <p class="persons_data">October 18, 2021</p>
+                </div>
+            </div>
+            <div class="carusel_items ">
+                <img src="./img/navigating/p_2.png" alt="foto" class="navigating_foto">
+                <p class="v_text nav_v_text">Biking accessories for the beaten path</p>
+                <div class="navigating_persons flex">
+                    <img src="./img/navigating/n_2.png" alt="foto" class="persons_foto">
+                    <div class="persons">
+                        <p class="persons_name">Woodie Brandon</p>
+                        <p class="persons_position">Product Designer</p>
+                    </div>
+                    <p class="persons_data">October 18, 2021</p>
+                </div>
+            </div>
+            <div class="carusel_buttons">
+                <button class="buttons carusel_button">Show all buyer's guides</button>
             </div>
         </div>
     </section>
