--- a/index.html
+++ b/index.html
@@ -48,9 +48,11 @@
         </div>
     </header>
     <section class="exploration">
-        <h3 class="v_pre_title">OUTDOOR EXPLORATION</h3>
-        <h1 class="title">Gear for when it actually matters.</h1>
-        <p class="v_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        <div class="container">
+            <h3 class="v_pre_title">OUTDOOR EXPLORATION</h3>
+            <h1 class="title">Gear for when it actually matters.</h1>
+            <p class="v_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
+        </div>
     </section>
     <section class="about">
             <div class="container flex">
@@ -176,25 +178,24 @@
     </section>
     <section class="products">
         <div class="products_top">
-            <img src="./img/products/fon_top.png" alt="fon">
-            <div class="products_top_content ">
+            <div class="products_top_content container">
                 <ul class="products_list  flex">
                     <li class="flex">
                         <img class="products_icon" src="./img/products/1.png" alt="basket">
-                        <p class="products_text products_icon">First Aid Kit  </p>
-                        <p class="products_text">Banger Bottle</p>
+                        <a href="#" class="products_text products_icon">First Aid Kit </a>
+                        <a href="#" class="products_text">Banger Bottle</a>
                     </li>
                     <li class="flex">
                         <img class="products_icon"  src="./img/products/2.png" alt="foto">
-                        <p class="products_text">Brian Schultz</p>
+                         <a href="#" class="products_text">Brian Schultz</a>
                     </li>
                     <li class="flex">
                         <img class="products_icon" src="./img/products/3.png" alt="foto">
-                        <p class="products_text">Leah Stoff</p>
+                         <a href="#" class="products_text">Leah Stoff</a>
                     </li>
                     <li class="flex">
                         <img class="products_icon" src="./img/products/4.png" alt="foto">
-                        <p class="products_text">Catalina, California</p>
+                         <a href="#" class="products_text">Catalina, California</a>
                     </li>
                 </ul>
             </div>
@@ -274,46 +275,116 @@
             <div class="footer_content flex">
                 <div class="footer_content_left flex">
                    <div class="footer_list">
-                        <h3 class="footer_list_title">Pages</h3>
-                        <h3 class="footer_list_paragraph">Home</h3>
-                        <h3 class="footer_list_paragraph">Shop</h3>
-                        <h3 class="footer_list_paragraph">Categories</h3>
-                        <h3 class="footer_list_paragraph">Buyer's guides</h3>
-                        <h3 class="footer_list_paragraph">404</h3>
-                        <h3 class="footer_list_paragraph">Password</h3>
-                   </div>
+                       <ul class="footer_ul">
+                           <li class="footer_list_title">
+                               <a class="footer_list_title_a" href="">Pages</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Home</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Shop</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Categories</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Buyer's guides</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">404</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Password</a>
+                           </li>
+                       </ul>
+                    </div>
                    <div class="footer_list">
-                        <h3 class="footer_list_title">Gear categories</h3>
-                        <h3 class="footer_list_paragraph">Hiking Gear</h3>
-                        <h3 class="footer_list_paragraph">Climbing Gear</h3>
-                        <h3 class="footer_list_paragraph">Jackets</h3>
-                        <h3 class="footer_list_paragraph">Accessories</h3>
-                        <h3 class="footer_list_paragraph">Apparel</h3>
-                        <h3 class="footer_list_paragraph">Headwear</h3>
-                   </div>
+                       <ul class="footer_ul">
+                           <li class="footer_list_title">
+                               <a class="footer_list_title_a" href="">Gear categories</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Hiking Gear</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Climbing Gear</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Jackets</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Accessories</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Apparel</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Headwear</a>
+                           </li>
+                       </ul>
+                    </div>
                    <div class="footer_list">
-                        <h3 class="footer_list_title">Company</h3>
-                        <h3 class="footer_list_paragraph">About us</h3>
-                        <h3 class="footer_list_paragraph">Our team</h3>
-                        <h3 class="footer_list_paragraph">Contact</h3>
-                        <h3 class="footer_list_paragraph">Terms & Conditions</h3>
-                        <h3 class="footer_list_paragraph">Style guide</h3>
-                        <h3 class="footer_list_paragraph">Licenses</h3>
-                   </div>
+                       <ul class="footer_ul">
+                           <li class="footer_list_title">
+                               <a class="footer_list_title_a" href="">Company</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">About us</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Our team</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Contact</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Terms & Conditions</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Style guide</a>
+                           </li>
+                           <li class="footer_list_paragraph">
+                            <a class="footer_list_paragraph_a" href="#">Licenses</a>
+                           </li>
+                       </ul>
+                    </div>
                 </div>
                 <div class="footer_content_right">
                     <div class="footer_contecst">
-                        <h3 class="footer_list_title">Newsletter</h3>
+                        <div class="footer_list_title">
+                            <a class="footer_list_title_a" href="#">Newsletter</a>
+                        </div>
                         <p class="footer_list_text">Subscribe to our (infrequent) newsletter where we share news about upcoming listings and projects.</p>
                     </div>
                     <div class="footer_right_form">
                         <label class="footer_label">
-                            <input class="footer_input" type="email" placeholder="E-mail">
+                            <input class="footer_input" type="email" placeholder="E-mail" required>
                         </label>
                         <div class="footer_button">
                             <button class="button-grey">Submit</button>
                         </div>
                     </div>
+                </div>
+            </div>
+            <div class="footer_bottom flex">
+                <div class="footer_bottom_left fkex">
+                    <a href="#" class="footer_link">© Outdoor Exploration, LLC. All rights reserved. Powered by</a>
+                    <a href="#" class="footer_link">Webflow</a>
+                </div>
+                <div class="footer_bottom_social">
+                    <a href="#" class="footer_icon">
+                        <img src="./img/footer/faseboock.png" alt="icon">
+                    </a>
+                    <a href="#" class="footer_icon">
+                        <img src="./img/footer/in.png" alt="icon">
+                    </a>
+                    <a href="#" class="footer_icon">
+                        <img src="./img/footer/instagram.png" alt="icon">
+                    </a>
+                    <a href="#" class="footer_icon">
+                        <img src="./img/footer/twiter.png" alt="icon">
+                    </a>
                 </div>
             </div>
         </div>
@@ -327,4 +398,4 @@
     <script src="./script/bxslider.js"></script>
     <script src="./script/upBottom.js"></script>
 </body>
-</html>
+</html> -->
