--- a/index.html
+++ b/index.html
@@ -18,33 +18,43 @@
     <div class="wrapper">
     <header class="header container flex">
         <img src="./img/header/logo.png" alt="logo">
-        <nav class="header_nav">
-            <ul class="header_ul flex">
-            <li class="header_li">
-                <a href="#" class="header_link">Shop</a>
-            </li>
-            <li class="header_li">
-                <a href="#" class="header_link">About us</a>
-            </li>
-            <li class="header_li">
-                <a href="#" class="header_link">Our team</a>
-            </li>
-            <li class="header_li">
-                <a href="#" class="header_link">Buyer's guides</a>
-            </li>
-            <li class="header_li">
-                <a href="#" class="header_link">Categories</a>
-            </li>
-            </ul>
-        </nav>
-        <div>
-            <button class="button-grey">Buy template</button>
-        </div>
-        <div class="button-grey_basket">
-            <button class="button-grey button_basket">Cart</button>
-            <img src="./img/header/basket.png" alt="basket" class="header_basket">
-            <div class="header_img"></div>
-            <div class="header_number">0</div>
+        <div class="header_menu_top">
+            <input type="checkbox" class="header_menu_checkbox">
+            <div class="header_menu_check">
+                <div class="check"></div>
+                <div class="check"></div>
+                <div class="check"></div>
+            </div>
+            <div class="header_menu flex">
+            <nav class="header_nav">
+                <ul class="header_ul flex">
+                <li class="header_li">
+                    <a href="#" class="header_link">Shop</a>
+                </li>
+                <li class="header_li">
+                    <a href="#" class="header_link">About us</a>
+                </li>
+                <li class="header_li">
+                    <a href="#" class="header_link">Our team</a>
+                </li>
+                <li class="header_li">
+                    <a href="#" class="header_link">Buyer's guides</a>
+                </li>
+                <li class="header_li">
+                    <a href="#" class="header_link">Categories</a>
+                </li>
+                </ul>
+            </nav>
+            <div>
+                <button class="button-grey">Buy template</button>
+            </div>
+            <div class="button-grey_basket">
+                <button class="button-grey button_basket">Cart</button>
+                <img src="./img/header/basket.png" alt="basket" class="header_basket">
+                <div class="header_img"></div>
+                <div class="header_number">0</div>
+            </div>
+            </div>
         </div>
     </header>
     <section class="exploration">
@@ -208,11 +218,6 @@
                 <div class="products_buttons">
                     <button class="products_button">Visit shop</button>
                 </div>
-            </div>
-            <div class="products_bottom_fon">
-                <img src="./img/products/fon_bottom.png" alt="fon grid">
-            </div>
-        </div>
     </section>
     <section class="navigating container">
         <div class="navigating_content">
