--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
                 <h2 class="v_title">Setting the bar for our products.</h2>
                 <p class="v_text setting_v_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
             </div>
-            <div class="grid_setting">
+            <div class="grid_setting ">
                  <div class="items_setting">
                     <img class="items_setting_img" src="./img/setting/1.png" alt="pictures">
                     <h3 class="items_setting_title">Sustainable sourcing</h3>
@@ -190,20 +190,20 @@
         <div class="products_top">
             <div class="products_top_content container">
                 <ul class="products_list  flex">
-                    <li class="flex">
+                    <li class="products_li flex">
                         <img class="products_icon" src="./img/products/1.png" alt="basket">
                         <a href="#" class="products_text products_icon">First Aid Kit </a>
                         <a href="#" class="products_text">Banger Bottle</a>
                     </li>
-                    <li class="flex">
+                    <li class="products_li  flex">
                         <img class="products_icon"  src="./img/products/2.png" alt="foto">
                          <a href="#" class="products_text">Brian Schultz</a>
                     </li>
-                    <li class="flex">
+                    <li class="products_li  flex">
                         <img class="products_icon" src="./img/products/3.png" alt="foto">
                          <a href="#" class="products_text">Leah Stoff</a>
                     </li>
-                    <li class="flex">
+                    <li class="products_li  flex">
                         <img class="products_icon" src="./img/products/4.png" alt="foto">
                          <a href="#" class="products_text">Catalina, California</a>
                     </li>
@@ -255,8 +255,7 @@
             <button class="buttons carusel_button">Show all buyer's guides</button>
         </div>
     </section>
-    <section id="buy" class="subscribe about">
-        <div class="container flex">
+    <section id="buy" class="about subscribe container flex">
         <img class="about_img" src="./img/subscribe/1.png" alt="pictures">
         <img src="./img/about/fon.png" alt="fon" class="about_fon_top">
         <img src="./img/about/fon.png" alt="fon" class="about_fon_bottom">
@@ -270,7 +269,6 @@
                 <button class="buttons">Read more</button>
             </div>
         </div>
-    </div>
     </section>
     <footer id="foot" class="footer">
         <div class="container">
@@ -373,7 +371,7 @@
                 </div>
             </div>
             <div class="footer_bottom flex">
-                <div class="footer_bottom_left ">
+                <div class="footer_bottom_left flex ">
                     <a href="#" class="footer_link">© Outdoor Exploration, LLC. All rights reserved. Powered by</a>
                     <a href="#" class="footer_link">Webflow</a>
                 </div>
