--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./style.css/script.css">
     <link rel="stylesheet" href="./style.css/carusel.css">
     <link rel="stylesheet" href="./style.css/upBottom.css">
+    <link rel="stylesheet" href="./wow/animate.css">
 </head>
 <body>
     <div class="wrapper">
@@ -62,7 +63,7 @@
     <section class="exploration">
         <div class="container">
             <h3 class="v_pre_title">OUTDOOR EXPLORATION</h3>
-            <h1 class="title">Gear for when it actually matters.</h1>
+            <h1 class="title wow bounceOut">Gear for when it actually matters.</h1>
             <p class="v_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
         </div>
     </section>
@@ -81,7 +82,7 @@
                 </div>
             </div>
     </section>
-    <section id="cat" class="setting">
+    <section id="cat" class="setting ">
         <div class="container">
             <div class="setting_top">
                 <h3 class="v_pre_title">Our promise</h3>
@@ -89,32 +90,32 @@
                 <p class="v_text setting_v_text">Morbi neque ex, condimentum dapibus congue et, vulputate ut ligula. Vestibulum sit amet urna turpis. Mauris euismod elit et nisi ultrices, ut faucibus orci tincidunt.</p>
             </div>
             <div class="grid_setting ">
-                 <div class="items_setting">
+                 <div class="items_setting wow swing">
                     <img class="items_setting_img" src="./img/setting/1.png" alt="pictures">
                     <h3 class="items_setting_title">Sustainable sourcing</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting">
+                 <div class="items_setting wow swing">
                     <img class="items_setting_img" src="./img/setting/2.png" alt="pictures">
                     <h3 class="items_setting_title">Lifetime warranty</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting">
+                 <div class="items_setting wow swing">
                     <img class="items_setting_img" src="./img/setting/3.png" alt="pictures">
                     <h3 class="items_setting_title">All-terrain tested</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting">
+                 <div class="items_setting wow swing">
                     <img class="items_setting_img" src="./img/setting/4.png" alt="pictures">
                     <h3 class="items_setting_title">Premium materials</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                  </div>
-                 <div class="items_setting">
+                 <div class="items_setting wow swing">
                     <img class="items_setting_img" src="./img/setting/5.png" alt="pictures">
                     <h3 class="items_setting_title">Designed by you</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
                 </div>
-                    <div class="items_setting">
+                    <div class="items_setting wow swing">
                     <img class="items_setting_img" src="./img/setting/6.png" alt="pictures">
                     <h3 class="items_setting_title">Quality assured</h3>
                     <p class="items_setting_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse varius enim in eros elementum tristique.</p>
@@ -362,7 +363,7 @@
                     </div>
                     <div class="footer_right_form">
                         <label class="footer_label">
-                            <input class="footer_input" type="email" placeholder="E-mail" required>
+                            <input class="footer_input" type="email" placeholder="E-mail" required maxlength="30">
                         </label>
                         <div class="footer_button">
                             <button class="button-grey">Submit</button>
@@ -414,7 +415,12 @@
     </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js" integrity="sha512-aVKKRRi/Q/YV+4mjoKBsE4x3H+BkegoM/em46NNlCqNTmUYADjBbeNefNxYV7giUp0VxICtqdrbqU7iVaeZNXA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bxslider/4.2.15/jquery.bxslider.min.js" integrity="sha512-p55Bpm5gf7tvTsmkwyszUe4oVMwxJMoff7Jq3J/oHaBk+tNQvDKNz9/gLxn9vyCjgd6SAoqLnL13fnuZzCYAUA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+    <script src="/path/to/parallax.min.js"></script>
     <script src="./script/bxslider.js"></script>
     <script src="./script/upBottom.js"></script>
+    <script src="./wow/wow.min.js"></script>
+    <script>
+        new WOW().init();
+        </script>
 </body>
 </html> -->
